--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   postgres: ^3.5.6
   uuid: ^4.5.1
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
