--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   mime: ^1.0.6
   url_launcher: ^6.3.1
   intl: ^0.20.2
+  crypto: ^3.0.3
+  window_manager: ^0.4.2
 
 dev_dependencies:
   flutter_test:
