--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -16,5 +16,11 @@
 	<true/>
 	<key>com.apple.security.files.bookmarks.app-scope</key>
 	<true/>
+	<key>com.apple.security.camera</key>
+	<true/>
+	<key>com.apple.security.photos.library</key>
+	<true/>
+	<key>com.apple.security.microphone</key>
+	<true/>
 </dict>
 </plist>
