--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   intl: ^0.20.2
   crypto: ^3.0.3
   window_manager: ^0.4.2
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
